| Bug #42635 | mysqldump includes views that were excluded using the --ignore-table option | ||
|---|---|---|---|
| Submitted: | 6 Feb 2:13 | Modified: | 18 Mar 16:50 |
| Reporter: | Roel Van de Paar | ||
| Status: | Closed | ||
| Category: | Client | Severity: | S3 (Non-critical) |
| Version: | 5.0.66sp1, 5.0.77, 5.0 bzr | OS: | Any |
| Assigned to: | Bugs System | Target Version: | 5.0 |
| Triage: | Triaged: D3 (Medium) | ||
[6 Feb 2:13]
Roel Van de Paar
[6 Feb 2:22]
Roel Van de Paar
Also see bug #16453
[6 Feb 8:19]
Sveta Smirnova
Thank you for the report. Verified as described.
[9 Mar 22:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/68704 2751 Chad MILLER 2009-03-09 Bug#42635: mysqldump includes views that were excluded using the \ --ignore-table option mysqldump would correctly omit temporary tables for views, but would incorrectly still emit all CREATE VIEW statements. Backport a fix from 5.1, where we capture the names we want to emit views for in one pass (the placeholder tables) and in the pass where we actually emit the views, we don't emit a view if it wasn't in that list.
[12 Mar 18:39]
Chad MILLER
Queued to 5.0-, 5.1-, and 6.0-bugteam.
[13 Mar 20:04]
Bugs System
Pushed into 5.1.33 (revid:joro@sun.com-20090313111355-7bsi1hgkvrg8pdds) (version source revid:azundris@mysql.com-20090312180626-z653xehej5pqum7r) (merge vers: 5.1.33) (pib:6)
[13 Mar 20:09]
Bugs System
Pushed into 5.0.80 (revid:chad@mysql.com-20090312173213-viivy35mb79n1zlg) (version source revid:chad@mysql.com-20090310165343-1twklhsmwipazv9i) (merge vers: 5.0.79) (pib:6)
[15 Mar 3:34]
Paul DuBois
Noted in 5.0.80, 5.1.33 changelogs. mysqldump included views that were excluded with the --ignore-table option. Setting report to NDI pending push into 6.0.x.
[18 Mar 14:20]
Bugs System
Pushed into 6.0.11-alpha (revid:joro@sun.com-20090318122208-1b5kvg6zeb4hxwp9) (version source revid:azundris@mysql.com-20090312170222-ge037buaytw4yjf8) (merge vers: 6.0.11-alpha) (pib:6)
[18 Mar 16:50]
Paul DuBois
Noted in 6.0.11 changelog.
[9 May 18:43]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl) (version source revid:jonas@mysql.com-20090508100057-30ote4xggi4nq14v) (merge vers: 5.1.33-ndb-6.2.18) (pib:6)
[9 May 19:40]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt) (version source revid:jonas@mysql.com-20090508175813-s6yele2z3oh6o99z) (merge vers: 5.1.33-ndb-6.3.25) (pib:6)
[9 May 20:37]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc) (version source revid:jonas@mysql.com-20090509073226-09bljakh9eppogec) (merge vers: 5.1.33-ndb-7.0.6) (pib:6)
